# energy_consumption

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  dvc_teste.txt  pyproject.toml  test_dvc.txt.dvc  xgboost.json
.dvc/: config
configs/: config.yaml
configs/data/: kaggle.yaml  load.yaml
configs/eval/: default.yaml
configs/features/: make.yaml
configs/forecast/: base.yaml
configs/mlflow/: dagshub.yaml
configs/model/: xgboost.yaml
configs/predict/: default.yaml
configs/train/: train.yaml
data/evaluation/: metrics.csv
data/evaluation/tables/: evaluation_table.csv
data/interim/: energy_interim.csv
models/: xgb_model.pkl
notebooks/: test.ipynb
outputs/2025-11-16/01-32-58/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-21/23-04-25/.hydra/: hydra.yaml
outputs/2025-11-21/23-05-39/.hydra/: hydra.yaml
outputs/2025-11-21/23-09-18/.hydra/: hydra.yaml
outputs/2025-11-21/23-11-05/.hydra/: hydra.yaml
outputs/2025-11-21/23-17-30/.hydra/: hydra.yaml
outputs/2025-11-22/17-15-17/.hydra/: hydra.yaml
outputs/2025-11-22/17-18-21/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-22/17-24-05/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-22/17-24-19/.hydra/: hydra.yaml
src/: train.py
src/configs/: main.yaml
src/configs/data/: api.yaml
src/configs/logging/: mlflow.yaml
src/configs/training/: default.yaml
src/data/: load_data.py
src/features/: make_features.py
src/models/: evaluate.py  predict.py  train.py  train_xgboost.py
src/utils/: io.py  logger.py  metrics.py  models.py
(+6 files in other folders)
