[project]
name = "energy_consumption"
version = "0.1.0"
description = "Time Series Forecasting with XGBoost, Hydra, DVC and MLflow"
authors = [
    { name = "Thiago Ribeiro", email = "152446274+thiagocarvalhor@users.noreply.github.com" }
]
packages = [{include = "src"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "seaborn",
    "hydra-core",
    "mlflow",
    "rich",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^3.0"
black = "^24.0"
isort = "^5.13"
flake8 = "^7.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
